--- a/root/css/reset.css
+++ b/root/css/reset.css
@@ -40,3 +40,21 @@ table {
         border-collapse: collapse;
         border-spacing: 0;
 }
+
+/* custom reset styles start here */
+
+/* Remove yellow outline from submits in chrome */
+input[type="text"]:focus,
+input[type="password"]:focus {
+  outline: none;
+}
+
+/* Remove dotted outline from submits in IE9 */
+input[type="submit"]:focus {
+  outline: none;
+}
+
+/* Remove dotted outline from submits in firefox */
+#login input[type="submit"]::-moz-focus-inner {
+  border: 0;
+}
