use node/js instead of php/apache

--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,7 @@
-<?php require_once('../views/header.php'); ?>
         <div id="top">
           <h1>Andrew Rasmussen</h1>
           <a href="mailto:andrew@venz.io">andrew@venz.io</a>
-          <a href="http://www.rasmuzen.com/resume.php">resume</a>
+          <a href="/resume">resume</a>
         </div>
         <div id="bottom">
           <div id="about-me">
@@ -75,9 +74,9 @@
             <h2>Stuff I've Built</h2>
             <ul>
               <li>
-                <h3><a href="http://gfx.rasmuzen.com">WebGL Research</a></h3>
-                <p>I'm currently working on a <a href="http://gfx.rasmuzen.com">3d multiplayer game</a> for the browser using WebGL, Node.JS, and Socket.IO. At this point, the main purpose of the project is to see if a MMO game is even plausible in the browser with current tech.</p>
-                <a href="http://gfx.rasmuzen.com"><img src="/img/gfx.png" alt="gfx" /></a>
+                <h3><a href="http://venz.io">WebGL Research</a></h3>
+                <p>I'm currently working on a <a href="http://venz.io">3d multiplayer game</a> for the browser using WebGL, Node.JS, and Socket.IO. At this point, the main purpose of the project is to see if a MMO game is even plausible in the browser with current tech.</p>
+                <a href="http://venz.io"><img src="/img/gfx.png" alt="gfx" /></a>
               </li>
               <li>
                 <h3><a href="http://tungstenproperty.com">Tungsten Property</a></h3>
@@ -96,4 +95,3 @@
             </ul>
           </div>
         </div>
-<?php require_once('../views/footer.php'); ?>
