--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
             <h2>About Me</h2>
             <ul>
               <li>I'm currently interning on the iOS Mobile Core team at <a href="http://www.facebook.com/raz">Facebook</a></li>
-              <li>I'm currently hacking on a <a href="http://gfx.rasmuzen.com">3d multiplayer game</a> for the browser</li>
+              <li>I'm currently hacking on a <a href="http://venz.io">3d multiplayer game</a> for the browser</li>
               <li>I studied Software Engineering at the University of Waterloo for ~4 years, did not complete my degree, and do not intend on doing so</li>
               <li>I've lived (and worked) in San Diego CA, Mountain View CA, Seattle WA, New York NY, Waterloo ON, and London ON</li>
             </ul>
@@ -76,7 +76,7 @@
               <li>
                 <h3><a href="http://venz.io">WebGL Research</a></h3>
                 <p>I'm currently working on a <a href="http://venz.io">3d multiplayer game</a> for the browser using WebGL, Node.JS, and Socket.IO. At this point, the main purpose of the project is to see if a MMO game is even plausible in the browser with current tech.</p>
-                <a href="http://venz.io"><img src="/img/gfx.png" alt="gfx" /></a>
+                <a href="http://venz.io"><img src="/img/venzio.png" alt="venzio" /></a>
               </li>
               <li>
                 <h3><a href="http://tungstenproperty.com">Tungsten Property</a></h3>
