--- a/views/resume.html
+++ b/views/resume.html
@@ -96,8 +96,8 @@
         width:394px;
       }
 
-      #entries .entry:nth-child(5),
-      #entries .entry:nth-child(6) {
+      #entries .entry:nth-child(7),
+      #entries .entry:nth-child(8) {
         border-bottom:none;
         height:125px;
       }
@@ -131,40 +131,62 @@
       <div id="masthead">
         <div id="title">
           <h1>Andrew Rasmussen</h1>
-          <p>3B Software Engineering - University of Waterloo</p>
-          <p>arasmussen (at) katworks (dot) com</p>
+          <p>andrew@venz.io</p>
         </div>
       </div>
       <div id="skills" class="section">
         <h2>Technical Skills</h2>
         <ul>
-          <li>Eight years of programming experience
+          <li>Nine years of programming experience
             <ul>
+              <li><h4>JavaScript (2 years)</h4>- Front-end interactivity, back-end node applications, industry experience at Facebook</li>
+              <li><h4>PHP, MySQL (4 years)</h4>- Back-end of numerous web applications, industry experience at Facebook</li>
+              <li><h4>OpenGL, WebGL, GLSL (2 years)</h4>- Modern OpenGL and WebGL using vertex buffer objects, fragment/vertex shaders</li>
               <li><h4>C/C++ (8 years)</h4>- 3D games (OpenGL), extensive experience with pointers, STL, OOP, templates</li>
-              <li><h4>PHP, MySQL (3 years)</h4>- Backend of numerous web applications, industry experience at Facebook</li>
-              <li><h4>OpenGL/GLSL (1 year)</h4>- Modern OpenGL using vertex buffer objects, fragment/vertex shaders</li>
-              <li><h4>C# (8 months)</h4>- Windows Forms GUI applications, backend of ASP.NET web applications</li>
-              <li><h4>JavaScript, jQuery, AJAX (1 year)</h4>- Interactive web applications, industry experience at Facebook</li>
               <li><h4>Python (6 months)</h4>- 2D games using PyGame (Astroids and Breakout clones)</li>
             </ul>
           </li>
-          <li>Familiarity: XML, JSON, Regex, HTML, CSS, Scheme, ASP.NET, Perl, Lua, Bash</li>
-          <li>Platforms: Linux (Ubuntu, Red Hat, Fedora), Windows</li>
-          <li>Editors: Vim, Visual Studio 2008/2010, Eclipse</li>
+          <li>Very comfortable with the command line in linux and regular expressions</li>
+          <li>Favorite editor is vim</li>
         </ul>
       </div>
       <div id="experience" class="section">
         <h2>Relevant Work Experience</h2>
         <div id="entries">
           <div class="entry">
+            <div class="for"><a href="http://venz.io/demo">Venzio</a>: Seattle, WA<span>December 2012 to current</span></div>
+            <h3>Founder</h3>
+            <div class="details">
+              <ul>
+                <li>Created an interactive 3D world with basic physics, textured terrain, lighting, skeletal animation, and multiplayer functionality</li>
+                <li>Designed a compressed binary format to reduce skeleton and animation file sizes by 60-75 percent for faster loading</li>
+                <li>Interviewed for YC funding for summer 2013 term</li>
+                <li>Technologies: JavaScript, WebGL, Node, Mongo, HTML, CSS</li>
+              </ul>
+            </div>
+          </div>
+          <div class="entry">
+            <div class="for">Facebook: Seattle, WA<span>January-April, 2013</span></div>
+            <h3>iOS Mobile Core Engineer</h3>
+            <div class="details">
+              <ul>
+                <li>Implemented features to meet the functionality of the website, fixed crashes and other miscellaneous bugs</li>
+                <li>Reduced network requests by up to hundreds of milliseconds by caching stuff</li>
+                <li>Technologies: Obj-C, JavaScript</li>
+              </ul>
+            </div>
+          </div>
+          <div class="entry">
             <div class="for">Facebook: Menlo Park, CA<span>May-August, 2012</span></div>
             <h3>Photos Team Engineer</h3>
-            <ul>
-              <li>Owned a project that was taken from initial design to internal photos team launch (public launch coming soon)</li>
-              <li>Participated in multiple overnight hackathons, hacking on internal side projects</li>
-              <li>Helped with general weekly photos team bugs/tasks</li>
-              <li>Technologies: PHP, JavaScript, CSS</li>
-            </ul>
+            <div class="details">
+              <ul>
+                <li>Owned a project that was taken from initial design to internal photos team launch (public launch coming soon)</li>
+                <li>Participated in multiple overnight hackathons, hacking on internal side projects</li>
+                <li>Helped with general weekly photos team bugs/tasks</li>
+                <li>Technologies: PHP, JavaScript, CSS</li>
+              </ul>
+            </div>
           </div>
           <div class="entry">
             <div class="for">Digital Extremes: London, ON<span>September-December, 2011</span></div>
@@ -232,14 +254,15 @@
             <li>
               <h3>Freelance Work</h3>
               <ul>
-                <li>Tungsten Property - single handedly launched <a href="http://www.tungstenproperty.com">Tungsten Property's site</a> from scratch (AWS/LAMP)</li>
+                <li>Tungsten Property - launched <a href="http://www.tungstenproperty.com">Tungsten Property's site</a> (AWS/LAMP)</li>
                 <li>Directory Remover - an easily configurable DOS Batch script to schedule the removal of certain directories - for Global Labs</li>
               </ul>
             </li>
             <li>
               <h3>Game/Graphics Programming:</h3>
               <ul>
-                <li>3D games (C++, modern OpenGL) using vertex buffer objects and shaders (GLSL)</li>
+                <li>3D games (C++/OpenGL and JavaScript/WebGL) using vertex buffer objects and shaders (GLSL)</li>
+                <li>Built the foundation for a game engine for WebGL that supports basic physics, lighting, texturing, and skeletal animation</li>
                 <li>Rendered ~3 million textured triangles using VBOs with &gt;300fps in a minecraft-like game (including physics)</li>
                 <li>Designed and implemented a game using a heightmap and associated collision detection</li>
               </ul>
@@ -248,18 +271,19 @@
               <h3>Web Programming:</h3>
               <ul>
                 <li>Interactive web plugins using vanilla JavaScript or jQuery</li>
-                <li>Applications with a PHP/MySQL backend and careful, secure, graphical interface to the database</li>
+                <li>Node servers that support server-side caching, EJS templates, subdomains, and more</li>
+                <li>Applications with a PHP/MySQL back-end and careful, secure, graphical interface to the database</li>
               </ul>
             </li>
-            <li><h3>Stack Overflow: </h3>Over 180 answers, have a reputation in the top 9% of users; mostly from answering C++/OpenGL questions</li>
+            <li><h3>Stack Overflow: </h3>Over 190 answers, have a reputation in the top 8% of users; mostly from answering C++/OpenGL questions</li>
             <li><h3>Project Euler: </h3>Completion of the dozens of challenges on this programming challenge/contest site for fun</li>
-            <li><h3>UW/Google AI Challenge: </h3>Participation in two Google sponsored, UW hosted, AI programming competitions. Overall ranking in both challenges were in the top quartile. Competition subjects include Rock Paper Scissors and Tron.</li>
+            <li><h3>UW/Google AI Challenge: </h3>Participation in two Google sponsored, UW hosted, AI programming competitions</li>
           </ul>
         </div>
         <div id="education" class="section">
           <h2>Education</h2>
           <ul>
-            <li><h3>Candidate for Bachelor of Software Engineering </h3>at the University of Waterloo, June 2014. Relevant courses include Operating Systems, Algorithms, Object Oriented Software Development, Data Structures</li>
+            <li>Studied <h3>Software Engineering</h3> at the University of Waterloo from 2009 to 2013 and then dropped out with one year remaining. Relevant courses include Operating Systems, Algorithms, Object Oriented Software Development, and Data Structures</li>
           </ul>
         </div>
       </div>
