update links to be local instead of global

--- a/views/index.html
+++ b/views/index.html
@@ -89,7 +89,7 @@
                 <a href="http://trigrid.rasmuzen.com"><img src="/img/trigrid.png" alt="trigrid" /></a>
               </li>
               <li>
-                <h3><a href="http://www.rasmuzen.com">Rasmuzen</a></h3>
+                <h3><a href="/">Rasmuzen</a></h3>
                 <p>I built and maintain this site and am planning on making it prettier and writing a blog someday.</p>
               </li>
             </ul>
