--- a/views/header.html
+++ b/views/header.html
@@ -16,7 +16,7 @@
     <div id="center">
       <div id="left">
         <div id="profile">
-          <a href="http://www.rasmuzen.com"><img src="/img/andrew.png" alt="andrew" /></a>
+          <a href="/"><img src="/img/andrew.png" alt="andrew" /></a>
         </div>
         <div id="nav">
           <ul>
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="http://www.rasmuzen.com/resume">
+              <a href="/resume">
                 <img class="navImg" src="/img/icons/rasmuzen.png" alt="resume icon" />
                 <span class="navSite">resume</span>
               </a>
