--- a/roots/www/template/header.html.ejs
+++ b/roots/www/template/header.html.ejs
@@ -24,48 +24,61 @@
         <div id="nav">
           <ul>
             <li>
-              <a href="https://www.facebook.com/raz">
+              <a target="_blank" href="https://www.facebook.com/raz">
                 <img class="navImg" src="/img/icons/facebook.png" alt="facebook icon" />
                 <span class="navSite">facebook</span>
               </a>
             </li>
             <li>
-              <a href="http://stackoverflow.com/users/710360/arasmussen">
+              <a target="_blank" href="http://stackoverflow.com/users/710360/arasmussen">
                 <img class="navImg" src="/img/icons/stackoverflow.png" alt="stackoverflow icon" />
                 <span class="navSite">stackoverflow</span>
               </a>
             </li>
             <li>
-              <a href="http://linkedin.com/pub/andrew-rasmussen/18/95/21b">
+              <a target="_blank" href="http://linkedin.com/pub/andrew-rasmussen/18/95/21b">
                 <img class="navImg" src="/img/icons/linkedin.png" alt="linkedin icon" />
                 <span class="navSite">linkedin</span>
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/rasmuzen">
+              <a target="_blank" href="https://twitter.com/rasmuzen">
                 <img class="navImg" src="/img/icons/twitter.png" alt="twitter icon" />
                 <span class="navSite">twitter</span>
               </a>
             </li>
             <li>
-              <a href="https://github.com/arasmussen">
+              <a target="_blank" href="https://github.com/arasmussen">
                 <img class="navImg" src="/img/icons/github.png" alt="github icon" />
                 <span class="navSite">github</span>
               </a>
             </li>
             <li>
-              <a href="/resume">
+              <a target="_blank" href="/resume">
                 <img class="navImg" src="/img/icons/rasmuzen.png" alt="resume icon" />
                 <span class="navSite">resume</span>
               </a>
             </li>
             <li>
-              <a href="http://venz.io">
+              <a target="_blank" href="http://venz.io">
                 <img class="navImg" src="/img/icons/venzio.png" alt="venzio icon" />
                 <span class="navSite">venzio</span>
+              </a>
+            </li>
+            <li>
+              <a href="/bitstamp">
+                <img class="navImg" src="/img/icons/rasmuzen.png" alt="rasmuzen icon" />
+                <span class="navSite">blog</span>
               </a>
             </li>
           </ul>
         </div>
       </div>
       <div id="content">
+        <div id="top">
+          <h1><a href="/">Andrew Rasmussen</a></h1>
+          <a target="_blank" href="mailto:andrew@venz.io">andrew@venz.io</a>
+          <a target="_blank" href="/resume">resume</a>
+          <a href="/bitstamp">blog</a>
+        </div>
+        <div id="bottom">
