--- a/root/css/style.css
+++ b/root/css/style.css
@@ -3,7 +3,7 @@
   October 2012
 */
 
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 /* CSS Resets
 ------------------------------------------------------------ */
